# RpiCameraService

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
CameraService/: CMakeLists.txt
CameraService/assets/: message_developer.json
CameraService/src/: CommandServer.cpp  CommandServer.h  ProfileMessages.cpp  ProfileMessages.h  VideoSource.cpp  VideoSource.h  main.cpp
test/: CMakeLists.txt
test/src/: TestHelpers.cpp  TestHelpers.h  TestJson.cpp  TestJson.h
